--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div class="page-container">
         <div class="login-box">
             <div class="login-logo">
-                <img src="images/telegram-logo.png" >
+                <img src="logo.png" >
             </div>
             <form action="login.php" method="post">
                 <input type="text" name="phone" placeholder="Phone number" required>
@@ -26,3 +26,4 @@
 </body>
 
 </html>
+
